Added some heuristic determination of anneal and crossover parameters. Added ability to run from shell script (havent testing windows batch). Not ready yet having computer issues.