@@ -1,7 +1,7 @@
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -50,7 +50,7 @@ public class OrderedListCrossover<T> {
             adjList.put(
                 orderedList.get(i), 
                 new HashSet<>(
-                    List.of(
+                    Arrays.asList(
                         orderedList.get(
                             i - 1 < 0 ? size - 1 : i - 1
                         ),
