@@ -1,7 +1,7 @@
 import static org.junit.Assert.assertEquals;
 
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
 
 import org.junit.Test;
 
@@ -9,10 +9,10 @@ public class CrossoverTest {
     @Test
     public void testCrossover() {
         ArrayList<Integer> a = new ArrayList<>(
-            List.of(1, 2, 3, 4, 5, 6, 7)
+            Arrays.asList(1, 2, 3, 4, 5, 6, 7)
         );
         ArrayList<Integer> b = new ArrayList<>(
-            List.of(1, 3, 6, 5, 7, 2, 4)
+            Arrays.asList(1, 3, 6, 5, 7, 2, 4)
         );
 
         ArrayList<Integer> crossed = new OrderedListCrossover<>(a, b).crossover();
